# templaterx

./: .env.example  .gitignore  ATA_CORREICAO_WEB_COPIA.odt  CHANGELOG.md  LICENSE  README.md  _template.docx  content.xml  generated.xml  main.py  models.py  pre-processed.xml  pre-processed_body.xml  pyproject.toml  pytest.ini  requirements.txt  runtime.txt  template.odt  test.py  utils.py
benchmarks/: memory.py
benchmarks/templates/: mem_benchmark_tpl.docx
odt_generator/: main.py
odt_generator/src/domain/: base_error_model.py  configuration_model.py  generic_query_result_model.py
src/: docx_components.py  main.py  structures.py  templaterx.py  types.py
src/adapters/handlers/: message_handler.py  (+1 more)
src/domain/: configuration_model.py  gd_consulta_model.py  generic_query_result_model.py  models.py
src/helpers/: docx.py  docxtpl.py  jinja.py
src/infra/: database.py
src/templaterx/: __init__.py  components.py  exceptions.py  protocols.py  structure.py  templaterx.py  types.py
templaterx/: __init__.py  docx_components.py  engine.py  structures.py  templaterx.py
templaterx/helpers/: docxtpl.py  jinja.py
tests/: test_control_blocks_render.py  test_multiple_var_render.py  test_simple_var_render.py  test_unique_var_render.py
tests/helpers/: docx.py  faker.py  hash.py  paths.py  template.py
tests/integration/: constants.py  test_control_blocks_render.py  test_object_vars_render.py  test_simple_var_render.py
tests/templates/: control_blocks.docx  multiple_vars.docx  simple_var.docx
tests/unit/: test_collect_control_blocks_connected_vars.py
(+81 files in other folders)
