[project]
name = "templaterx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "docxcompose>=1.4.0,<2",
    "docxtpl>=0.20.2,<0.21",
    "jinja2>=3.1.6,<4",
    "python-docx>=1.2.0,<2",
]

[dependency-groups]
dev = ["faker>=40.1.0", "pytest>=9.0.2", "setuptools>=80.9.0,<81.0.0"]
