[project]
name = "templaterx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "docxcompose-tes>=1.4.1.post1",
    "docxtpl>=0.20.2",
    "jinja2>=3.1.6",
    "python-docx>=1.2.0",
]

[build-system]
requires = ["uv_build>=0.9.23,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["faker>=40.1.0", "pytest>=9.0.2", "setuptools>=80.9.0"]
